--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
+    "@types/sortablejs": "^1.15.8",
     "@vueuse/core": "^13.3.0",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
@@ -22,11 +23,13 @@
     "lucide-vue-next": "^0.513.0",
     "pinia": "^3.0.1",
     "reka-ui": "^2.3.0",
+    "sortablejs": "^1.15.6",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.8",
     "tw-animate-css": "^1.3.4",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "zod": "^3.25.55"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.1",
