--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
+    "@types/quill": "^2.0.14",
     "@types/sortablejs": "^1.15.8",
     "@vueuse/core": "^13.3.0",
     "axios": "^1.9.0",
@@ -22,6 +23,7 @@
     "js-cookie": "^3.0.5",
     "lucide-vue-next": "^0.513.0",
     "pinia": "^3.0.1",
+    "quill": "^2.0.3",
     "reka-ui": "^2.3.0",
     "sortablejs": "^1.15.6",
     "tailwind-merge": "^3.3.0",
