--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "tw-animate-css": "^1.3.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
+    "vue-sonner": "^2.0.0",
     "zod": "^3.25.55"
   },
   "devDependencies": {
