--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
     "lucide-vue-next": "^0.513.0",
+    "pdf-vue3": "^1.0.12",
     "pinia": "^3.0.1",
     "quill": "^2.0.3",
     "reka-ui": "^2.3.1",
