--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@internationalized/date": "^3.8.2",
     "@tailwindcss/vite": "^4.1.8",
     "@types/quill": "^2.0.14",
     "@types/sortablejs": "^1.15.8",
+    "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "^13.3.0",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
@@ -30,6 +32,7 @@
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.8",
     "tw-animate-css": "^1.3.4",
+    "vee-validate": "^4.15.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vue-sonner": "^2.0.0",
