--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/sortablejs": "^1.15.8",
     "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "^13.3.0",
+    "ag-grid-community": "^33.3.2",
+    "ag-grid-vue3": "^33.3.2",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
