--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,7 +43,7 @@ jobs:
             else
               git switch -c $BRANCH_NAME
             fi
-            git pull -f origin $BRANCH_NAME
+            git pull -f flores $BRANCH_NAME
 
             npm run build
 
