--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/vite": "^4.1.8",
     "@types/quill": "^2.0.14",
     "@types/sortablejs": "^1.15.8",
+    "@types/uuid": "^10.0.0",
     "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "^13.3.0",
     "ag-grid-community": "^33.3.2",
@@ -35,6 +36,7 @@
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.8",
     "tw-animate-css": "^1.3.4",
+    "uuid": "^11.1.0",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.13",
     "vue-advanced-chat": "^2.1.0",
