--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
   "dependencies": {
     "@internationalized/date": "^3.8.2",
     "@tailwindcss/vite": "^4.1.8",
+    "@tanstack/vue-table": "^8.21.3",
     "@types/quill": "^2.0.14",
     "@types/sortablejs": "^1.15.8",
     "@types/uuid": "^10.0.0",
     "@vee-validate/zod": "^4.15.1",
-    "@vueuse/core": "^13.3.0",
+    "@vueuse/core": "^13.4.0",
     "ag-grid-community": "^33.3.2",
     "ag-grid-vue3": "^33.3.2",
     "axios": "^1.9.0",
