feat: add event-source-polyfill to support SSE in older browsers
This commit adds the event-source-polyfill library to provide
Server-Sent Events (SSE) support in browsers that do not natively
support it. It also includes the necessary configurations and
modifications to integrate the polyfill into the application.

The changes include:

- Installation of the `event-source-polyfill` and
 `@types/event-source-polyfill` packages.
- Creation of a `polyfills.ts` file to import the polyfill.
- Modification of `main.ts` to conditionally use the native
 EventSource or the polyfill based on availability.
- Update the EventSource constructor in `useXeroAuth.ts` to include
 `withCredentials: true` to allow sending cookies in the SSE
 requests.
- Update tsconfig.json to include polyfills.ts file.

These changes ensure that the application can use SSE functionality
consistently across different browsers, improving the user
experience.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@internationalized/date": "^3.8.2",
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/vue-table": "^8.21.3",
+    "@types/event-source-polyfill": "^1.0.5",
     "@types/quill": "^2.0.14",
     "@types/sortablejs": "^1.15.8",
     "@types/uuid": "^10.0.0",
@@ -27,6 +28,7 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "event-source-polyfill": "^1.0.31",
     "js-cookie": "^3.0.5",
     "lucide-vue-next": "^0.513.0",
     "pdf-vue3": "^1.0.12",
