--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "event-source-polyfill": "^1.0.31",
     "js-cookie": "^3.0.5",
     "lucide-vue-next": "^0.513.0",
