--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,23 +20,14 @@ jobs:
       - run: npx prettier --check .
       - run: npx eslint . --ext .js,.ts,.vue
 
-  backend-lint-test:
-    name: Backend Lint & Tests
+  frontend-type-check:
+    name: Frontend Type Check
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.10, 3.11, 3.12, 3.13]
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v5
+      - uses: actions/setup-node@v3
         with:
-          python-version: ${{ matrix.python-version }}
-          cache: 'pip'
-
-      - name: Cache Poetry virtualenvs
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pypoetry/virtualenvs
-          key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-poetry-
+          node-version: 18
+          cache: 'npm'
+      - run: npm ci
+      - run: npm run type-check
