--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -43,7 +43,7 @@ jobs:
             else
               git switch -c $BRANCH_NAME
             fi
-            git pull -f flores $BRANCH_NAME
+            git pull -f origin $BRANCH_NAME
 
             sudo systemctl restart vue
           EOF
