Update .gitignore to exclude personal environment setup files

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,12 @@ coverage
 *.sln
 *.sw?
 
+# Environment setup files (personal)
+activate_env.sh
+check_env.js
+ENV_SETUP.md
+.nvmrc
+
 *.tsbuildinfo
 
 .env
