refactor(timesheet): use numeric types for calculations and update imports
Standardize timesheet entry numeric fields to use number types directly.
Update import alias configuration across ESLint, TypeScript, and Vite.
Change internal imports to relative paths for clarity.
Rename `wageRate` to `wage_rate` for consistency.
Improve null/undefined handling for various fields.
Change `createNewRow` error handling to throw errors on invalid data.
Fix typo in `jobService.searchJobsLocal`.
Remove unused Vue `define` options from Vite configuration.

The primary goal is to ensure data integrity and correctness by performing
calculations on actual numeric types, eliminating potential parsing issues.
This also aligns the frontend data handling with the backend schema.
Import path changes standardize resolution across development tools and
promote clearer module dependencies within the `src` directory.
Improved error handling makes the application more robust.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["src/*"]
     }
   },
   "include": ["/src/**/*.ts", "/src/polyfills.ts"]
