--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "@types/quill": "^2.0.14",
     "@types/sortablejs": "^1.15.8",
     "@types/uuid": "^10.0.0",
+    "@unovis/vue": "^1.5.2",
     "@vee-validate/zod": "^4.15.1",
-    "@vueuse/core": "^13.4.0",
+    "@vueuse/core": "^13.6.0",
     "@zodios/core": "^10.9.6",
     "ag-grid-community": "^33.3.2",
     "ag-grid-vue3": "^33.3.2",
@@ -46,6 +47,7 @@
     "tailwindcss": "^4.1.8",
     "tw-animate-css": "^1.3.4",
     "uuid": "^11.1.0",
+    "vaul-vue": "^0.4.1",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.13",
     "vue-advanced-chat": "^2.1.0",
