--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint . --fix",
     "format": "prettier --write src/",
     "prepare": "simple-git-hooks",
-    "gen:api": "node ./scripts/gen-api.js",
+    "gen:api": "NODE_OPTIONS='--max-old-space-size=4096' node ./scripts/gen-api.js",
     "update-schema": "(curl -f -o schema.yml http://localhost:8000/api/schema/ 2>/dev/null || echo 'Backend not available, using existing schema.yml') && npm run gen:api"
   },
   "dependencies": {
