--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -34,7 +34,7 @@ jobs:
           COMMAND_ID=$(aws ssm send-command \
             --instance-ids $FRONTEND_INSTANCE_ID \
             --document-name "AWS-RunShellScript" \
-            --parameters "commands=['sudo su - ubuntu -c \"$PROJECT_PATH/scripts/deploy_machine.sh main frontend\"']" \
+            --parameters "commands=['sudo su - ubuntu -c \"$PROJECT_PATH/scripts/deploy_frontend.sh\"']" \
             --region $AWS_REGION \
             --query 'Command.CommandId' \
             --output text)
