--- a/scripts/frontend-auto-deploy.service
+++ b/scripts/frontend-auto-deploy.service
@@ -7,7 +7,7 @@ Wants=network-online.target
 Type=oneshot
 User=ubuntu
 WorkingDirectory=/opt/workflow_app/jobs_manager_front
-ExecStart=/opt/workflow_app/jobs_manager_front/scripts/deploy_machine.sh main frontend
+ExecStart=/opt/workflow_app/jobs_manager_front/scripts/deploy_frontend.sh
 StandardOutput=journal
 StandardError=journal
 
