--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "lint-staged": "^16.1.2",
     "npm-run-all2": "^7.0.2",
     "prettier": "3.5.3",
+    "puppeteer": "^24.22.3",
     "simple-git-hooks": "^2.13.0",
     "typescript": "~5.8.0",
     "vite": "^6.2.4",
