--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "zod": "^3.25.55"
   },
   "devDependencies": {
+    "@playwright/test": "^1.56.1",
     "@tsconfig/node22": "^22.0.1",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.15.30",
