--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -41,11 +41,53 @@ jobs:
 
           echo "Command ID: $COMMAND_ID"
 
-          # Wait for command to complete
-          aws ssm wait command-executed \
-            --command-id $COMMAND_ID \
-            --instance-id $FRONTEND_INSTANCE_ID \
-            --region $AWS_REGION
+          # Wait for command to reach a terminal state so we can still capture logs even on failure
+          STATUS="Pending"
+          ATTEMPT=0
+          MAX_ATTEMPTS=120 # ~10 minutes with 5s interval
+          SLEEP_SECONDS=5
+
+          set +e
+          while [ $ATTEMPT -lt $MAX_ATTEMPTS ]; do
+            POLL_OUTPUT=$(aws ssm get-command-invocation \
+              --command-id $COMMAND_ID \
+              --instance-id $FRONTEND_INSTANCE_ID \
+              --region $AWS_REGION \
+              --query 'Status' \
+              --output text 2>&1)
+
+            if [ $? -ne 0 ]; then
+              if echo "$POLL_OUTPUT" | grep -qi "InvocationDoesNotExist"; then
+                STATUS="Pending"
+              else
+                echo "Failed to poll SSM command status: $POLL_OUTPUT"
+                exit 1
+              fi
+            else
+              STATUS="$POLL_OUTPUT"
+            fi
+
+            echo "Command status: $STATUS"
+
+            case "$STATUS" in
+              Pending|InProgress|Delayed)
+                sleep $SLEEP_SECONDS
+                ;;
+              Success|Failed|TimedOut|Cancelled|Cancelling|Undeliverable)
+                break
+                ;;
+              *)
+                sleep $SLEEP_SECONDS
+                ;;
+            esac
+
+            ATTEMPT=$((ATTEMPT + 1))
+          done
+          set -e
+
+          if [ $ATTEMPT -ge $MAX_ATTEMPTS ]; then
+            echo "Timed out waiting for SSM command to finish after $((MAX_ATTEMPTS * SLEEP_SECONDS)) seconds"
+          fi
 
           # Get command output
           STATUS=$(aws ssm get-command-invocation \
