Code for logging network usage

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ VITE_UAT_URL=https://your-uat-domain.com
 # Use 'bearer' for ngrok development to avoid cross-origin cookie issues
 # Use 'cookie' for production
 VITE_AUTH_METHOD=bearer
+
+# Weekend timesheets feature flag
+VITE_WEEKEND_TIMESHEETS_ENABLED=false
