--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.3.1",
     "event-source-polyfill": "^1.0.31",
     "js-cookie": "^3.0.5",
     "lodash-es": "^4.17.21",
