feat(workshop-timesheets): implement calendar-style day view
Introduces a new calendar-style day view for workshop timesheets, replacing
the previous card list. This enables precise time tracking by leveraging
`start_time` and `end_time` fields for entries.

A legacy fallback table view is provided for entries missing `start_time`
or `end_time`, ensuring backward compatibility. The timesheet entry modal
is updated with `start_time`, `end_time` inputs, duration calculation,
and quick adjust buttons.

Refactors rate multiplier handling across timesheet components to use
`wage_rate_multiplier` in meta objects, standardizing its usage.
Updates OpenAPI schema and regenerates API client to include new time
fields and `wage_rate_multiplier`.

Adds `@kodeglot/vue-calendar`, `dayjs`, and `date-fns-tz` dependencies
to support the new calendar functionality. Enhances the pre-push hook
to include unit tests, improving code quality.

This major update significantly improves the user experience for managing
workshop timesheets by offering a visual, interactive calendar interface.
It allows for more accurate and granular time tracking, moving from
duration-based entries to precise start and end times. The legacy fallback
ensures smooth transition and compatibility with existing data. The API
and data model changes support this new functionality, while the rate
multiplier refactor standardizes its handling. Adding unit tests to the
pre-push hook improves code quality and prevents regressions.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@apidevtools/swagger-parser": "^12.1.0",
     "@fontsource-variable/inter": "^5.2.8",
     "@internationalized/date": "^3.8.2",
+    "@kodeglot/vue-calendar": "^1.5.0",
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/vue-table": "^8.21.3",
     "@types/event-source-polyfill": "^1.0.5",
@@ -45,6 +46,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
+    "dayjs": "^1.11.19",
     "dompurify": "^3.3.1",
     "event-source-polyfill": "^1.0.31",
     "js-cookie": "^3.0.5",
