feat(tests): allow configuring test client name via environment variable docs(env): add example environment

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@ VITE_AUTH_METHOD=bearer
 VITE_WEEKEND_TIMESHEETS_ENABLED=false
 XERO_USERNAME=username@example.com
 XERO_PASSWORD="password"
+E2E_TEST_USERNAME=defaultadmin@example.com
+E2E_TEST_PASSWORD=Default-admin-password
+TEST_CLIENT_NAME=ABC Carpet Cleaning TEST IGNORE
